Unkown Tuple Enum

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,15 @@
         "outDir": "dist",
         "target": "ES2015",
         "noEmitOnError": false,
-        "strict": true
+        "strict": true,
+        "declaration": true,
+        "moduleResolution": "node",
+        "noUncheckedIndexedAccess": true
     },
     "files": [
         "src/app.ts"
+    ],
+    "include": [
+        "src/types/**/*"
     ]
 }
